[package]
name = "server"
version = "0.1.0"
edition = "2018"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "3"
actix-files = "0.5"
actix = "0.12"
actix-rt = "2.3"
log = "0.4"
simple_logger = "1.13"
futures = "0.3"

[dependencies.mongodb]
version = "2.0.0"
default-features = false
features = ["async-std-runtime"]